--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <h1>Some Simple Things</h1>
   <p>Ridiculously-miniature applications priming you for OOP in PHP:</p>
   <ul>
-  	<li><a href="ex1/">Exercise #1</a>: Using existing classes.</li>
-  	<li><a href="ex2/">Exercise #2</a>: Defining a simple class.</li>
-  	<li><a href="ex3/">Exercise #3</a>: Extending a class.</li>
-  	<li><a href="ex4/">Exercise #4</a>: ??</li>
-  	<li><a href="ex5/">Exercise #5</a>: ??</li>
+  	<li><a href="ex1.php">Exercise #1</a>: Using existing classes.</li>
+  	<li><a href="ex2.php">Exercise #2</a>: Defining a simple class.</li>
+  	<li><a href="ex3.php">Exercise #3</a>: Extending a class.</li>
+  	<li><a href="ex4.php">Exercise #4</a>: ??</li>
+  	<li><a href="ex5.php">Exercise #5</a>: ??</li>
   </ul>
 </body>
 </html>
