--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
 </head>
 <body>
   <h1>Some Simple Things</h1>
-  <p>Ridiculously-miniature applications priming you for OOP in PHP:</p>
+  <p>Neat exercises for getting familar with OOP in PHP.</p>
   <ul>
   	<li><a href="ex1.php">Exercise #1</a>: Using existing classes.</li>
   	<li><a href="ex2.php">Exercise #2</a>: Defining a simple class.</li>
   	<li><a href="ex3.php">Exercise #3</a>: Extending a class.</li>
-  	<li><a href="ex4.php">Exercise #4</a>: ??</li>
-  	<li><a href="ex5.php">Exercise #5</a>: ??</li>
+  	<li><a href="ex4.php">Exercise #4</a>: Working with Exceptions</li>
   </ul>
 </body>
 </html>
